* Use KIO::copyAs and KIO::moveAs to rename/move files so that the   user is properly prompted when an existing name is used.

* Changed assert calls to Q_ASSERT calls.

BUG: 279997
FIXED-IN: 4.8.0